<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="item" type="com.jollypanda.gitforce.data.network.models.CommitWrapper"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginLeft="@dimen/dp8"
        android:layout_marginRight="@dimen/dp8"
        android:background="@android:color/white">
        <View
            android:id="@+id/vDelimiter"
            android:layout_width="@dimen/dp16"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            android:background="@color/background"/>

        <View
            android:id="@+id/vCircle1"
            android:layout_width="@dimen/dp32"
            android:layout_height="@dimen/dp32"
            app:layout_constraintLeft_toLeftOf="@id/vDelimiter"
            app:layout_constraintRight_toRightOf="@id/vDelimiter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/circle_background"/>

        <View
            android:layout_width="@dimen/dp12"
            android:layout_height="@dimen/dp12"
            app:layout_constraintLeft_toLeftOf="@id/vCircle1"
            app:layout_constraintRight_toRightOf="@id/vCircle1"
            app:layout_constraintTop_toTopOf="@id/vCircle1"
            app:layout_constraintBottom_toBottomOf="@id/vCircle1"
            android:background="@drawable/circle_white"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/tvHash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp8"
            android:layout_marginRight="@dimen/dp8"
            app:layout_constraintLeft_toRightOf="@+id/vDelimiter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:fontFamily="roboto"
            app:textWeight="thin"
            tools:text="1243hb42u3y4u2i3n4u5453o4m53o5"
            android:text="@{item.sha}"
            android:textColor="@android:color/black"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/tvAuthorHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHash"
            app:layout_constraintHorizontal_bias="0.25"
            app:fontFamily="roboto"
            app:textWeight="thin"
            android:text="@string/header_author"
            android:textColor="@android:color/black"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginLeft="@dimen/dp8"
            app:layout_constraintLeft_toRightOf="@+id/tvAuthorHeader"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvAuthorHeader"
            tools:text="Luke Skywoker"
            android:text="@{item.commitInfo.author.name}"
            android:textColor="@android:color/black"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/tvMsgHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            app:layout_constraintRight_toRightOf="@id/tvAuthorHeader"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthorHeader"
            app:fontFamily="roboto"
            app:textWeight="thin"
            android:text="@string/header_msg"
            android:textColor="@android:color/black"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/tvMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp8"
            android:layout_marginRight="@dimen/dp8"
            app:layout_constraintLeft_toRightOf="@+id/tvMsgHeader"
            app:layout_constraintTop_toTopOf="@+id/tvMsgHeader"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Freedom to Melmac. long asdasdasasdasdasdasdasdasdfghfgh"
            android:text="@{item.commitInfo.message}"
            android:textColor="@android:color/black"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/tvDateHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:layout_marginBottom="@dimen/dp8"
            app:layout_constraintRight_toRightOf="@id/tvMsgHeader"
            app:layout_constraintTop_toBottomOf="@+id/tvMsg"
            app:fontFamily="roboto"
            app:textWeight="thin"
            android:text="@string/header_date"
            android:textColor="@android:color/black"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp8"
            app:layout_constraintLeft_toRightOf="@+id/tvDateHeader"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvDateHeader"
            tools:text="21 May, 1991"
            android:text="@{item.commitInfo.author.date}"
            android:textColor="@android:color/black"/>

        <View
            android:id="@+id/vDivider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/dp8"
            app:layout_constraintTop_toBottomOf="@+id/tvDateHeader"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1"
            android:background="@color/background"/>
    </android.support.constraint.ConstraintLayout>

</layout>